# tts-kokoro

./: .gitignore  main.py  pyproject.toml
