[project]
name = "tts-kokoro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.2.0",
    "kokoro>=0.9.4",
    "kokoro-onnx>=0.4.9",
    "misaki[en]>=0.9.4",
    "onnxruntime>=1.22.0",
    "soundfile>=0.13.1",
    "unstructured[html]>=0.17.2",
]
